# GenPRLambda

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
infrastructure/cdk/: app.py  cdk.json  requirements.txt
infrastructure/cdk/stacks/: __init__.py  lambda_stack.py
src/: __init__.py  lambda_function.py
src/agent/: __init__.py  langchain_agent.py  prompts.py
src/config/: __init__.py  settings.py
src/mcp/: __init__.py  client.py  tools.py
src/utils/: __init__.py  logger.py  validators.py
tests/: __init__.py  test_agent.py  test_lambda_handler.py  test_mcp_client.py
